finished for now

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -26,7 +26,7 @@ html(lang='en')
               // div remark
               h1 Hello World! 
                   div           
-                    p Jade Rocks!
+                    p Jade Rocks our world!
       script(src="js/main.js")
     footer
           p © #{new Date().getFullYear()} Hydra Projects!
